# llm-discharge-summaries

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
data/: developer_nhs_uk_gt.json  prsb_example_gt.json
discharge_summaries/openai_llm/: chat_models.py  prompts.py  token_count.py
discharge_summaries/preprocessing/: preprocess_snomed.py
discharge_summaries/prompts/: diagnosis_summary.py
discharge_summaries/schemas/: medcat.py  message.py  mimic.py  output.py  prsb_guidelines.py  rcp_guidelines.py  span.py
discharge_summaries/snomed/: lookup.py  phrase_matcher.py  retriever.py
discharge_summaries/structured_data_extractors/: base.py  mimic.py
discharge_summaries/utils/: deduplicate.py
discharge_summaries/writers/: base.py  bhc.py
discharge_summaries/writers/mimic/: admission_details.py  gp_practice.py  patient_demographics.py  prsb_discharge_summary.py  referrer_details.py  utils.py
experiments/: create_dataset.ipynb  create_dataset_sentence.ipynb  create_dataset_spacy.ipynb  evaluation.ipynb  evaluation_json.ipynb  generation.ipynb  gpt_extraction.ipynb  heading_eval.ipynb  icd.ipynb  llama_2.ipynb  load_prsb_guidelines.ipynb  mimic_spacy_snomed.ipynb  pre_processing.ipynb  pre_processing_all_ds.ipynb  pre_processing_gpt.ipynb  prefix_invesigate_snomed.ipynb  prefix_investigate.ipynb  priority_ner.ipynb  procedure_extraction.ipynb  prsb_generation copy.ipynb  prsb_generation.ipynb  prsb_generation_mimic.ipynb  prsb_generation_semantic.ipynb  prsb_gt_creation.ipynb  prsb_guidelines_to_json_schema.ipynb  prsb_guidelines_to_pydantic.ipynb  remove_repeats.ipynb  simple_gpt.ipynb  snomed_load.ipynb  type_id_selector.ipynb
guidelines/: eDischarge-Summary-v2.1-1st-Feb-21.xlsx
llm_discharge_summaries/metrics/: distance_functions.py  krippendorffs_alpha.py
llm_discharge_summaries/openai_llm/: chat_models.py  message.py  prompts.py  token_count.py
llm_discharge_summaries/schemas/: message.py  mimic.py  rcp_guidelines.py
medcat_training/: build-vocab-embeddings.ipynb  medcat_creator copy 2.ipynb  medcat_creator copy.ipynb  medcat_creator.ipynb  medcat_tuning umls.ipynb  medcat_tuning.ipynb  medcat_tuning_snomed.ipynb  spacy.ipynb  training_set.ipynb  umls.ipynb
mimic_experiments/: 1_create_dataset.ipynb  2_1_mimic_generation_oss.ipynb  2_mimic_generation.ipynb  3_json_to_excel.ipynb  4_create_annotator_directories.ipynb  5_metrics.ipynb  create_dataset.ipynb  create_snomed_phrase_matcher.ipynb  evaluation.ipynb  extract_bhcs.ipynb  gpt_extraction copy.ipynb  gpt_extraction.ipynb  investigate_bhc.ipynb  load_phrase_matcher.ipynb  load_snomed.ipynb
mimic_experiments/outputs/: simplified_rcp_schema.json
prsb_experiments/: create_dataset.ipynb  database_extraction copy.ipynb  database_extraction.ipynb  load_snomed.ipynb
rcp_experiments/: 1_create_dataset.ipynb  2_mimic_generation.ipynb  3_json_to_excel.ipynb  4_create_annotator_folders.ipynb  5_automated_metrics.ipynb  create_dataset.ipynb  create_snomed_phrase_matcher.ipynb  hallunication.ipynb  json_to_excel.ipynb  mimic_generation.ipynb  rcp_generation.ipynb  sandbox.ipynb
sandbox/: generation.ipynb  mimic.ipynb  pre_processing.ipynb  prefix_investigate.ipynb  test.ipynb
(+2 files in other folders)
