[tool.poetry]
name = "discharge-summaries"
version = "0.1.0"
description = ""
authors = ["simonEllershaw <simje@live.co.uk>"]
readme = "README.md"
packages = [{include = "discharge_summaries"}]

[tool.poetry.dependencies]
python = "~3.8"
jupyter = "^1.0.0"
mypy = "^1.4.0"
python-dotenv = "^1.0.0"
openai = "^0.27.8"
rich = "^13.4.2"
bert-score = "^0.3.13"
nltk = "^3.8.1"
sentencepiece = "^0.1.99"
protobuf = "~3.20.0"
matplotlib = "^3.7.2"
torch = "1.13.1"
evaluate = "^0.4.0"
seqeval = "^1.2.2"
tiktoken = "^0.4.0"
openpyxl = "^3.1.2"
sentence-transformers = "^2.2.2"
jsonschema = "^4.19.0"
ninja = "^1.11.1"
packaging = "^23.1"
huggingface-hub = "^0.17.1"
typing-inspect = "0.8.0"
typing-extensions = "4.5.0"
pypdf2 = "^3.0.1"
unidecode = "^1.3.6"
jsonref = "^1.1.0"
rank-bm25 = "^0.2.2"
scispacy = "^0.5.3"
en_core_sci_lg = { url = "https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.3/en_core_sci_lg-0.5.3.tar.gz" }
rouge-score = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autoflake]
remove_all_unused_imports = true

[tool.black]
preview = true

[tool.isort]
profile = "black"
filter_files = true

[tool.mypy]
ignore_missing_imports = true
