[tool.poetry]
name = "llm-discharge-summaries"
version = "1.0.0"
description = ""
authors = ["simonEllershaw <simje@live.co.uk>"]
readme = "README.md"
packages = [{include = "llm_discharge_summaries"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
python-dotenv = "^1.0.0"
openai = "^0.27.8"
matplotlib = "^3.7.2"
tiktoken = "^0.4.0"
jsonschema = "^4.19.0"
jsonref = "^1.1.0"
pandas = "^2.1.4"
# pydantic fixed so schema generation is consitent
pydantic = "1.7.4"
openpyxl = "^3.1.2"
python-docx = "^1.1.0"
transformers = {extras = ["torch"], version = "^4.38.2"}
packaging = "^23.2"
setuptools = "^69.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autoflake]
remove_all_unused_imports = true

[tool.black]
preview = true

[tool.isort]
profile = "black"
filter_files = true

[tool.mypy]
ignore_missing_imports = true
